Update role config.